GNOME Bugzilla – Bug 767163
video-color: Fix colorimetry IS_UNKNOWN
Last modified: 2016-06-02 16:24:53 UTC
Fix issue with colorimetry default indicies not being in sync with the actual table causing IS_UNKNOWN() to sometimes fail.
Created attachment 328948 [details] [review] video-color: Fix colorimetry IS_UNKNOWN
Thanks! commit 1335ccd228d43f920235bbf4ffadeaeb567ee3ff Author: Stian Selnes <stian@pexip.com> Date: Tue May 10 13:56:13 2016 +0200 video-color: Fix colorimetry IS_UNKNOWN Fix issue with colorimetry default indicies not being in sync with the actual table causing IS_UNKNOWN() to sometimes fail. https://bugzilla.gnome.org/show_bug.cgi?id=767163